<resources>
    <string name="app_name">A</string>
        <string name="add_users">Add Users</string>
        <string name="name">Name</string>
        <string name="email_name">email id</string>

    <string name="header_bar">Header bar</string>
    <string name="dob_description">dob image</string>
    <string name="datetime_description">date and time description</string>
    <string name="stars_description">stars image description</string>
        <string name="gender">Gender</string>
        <string name="male">Male</string>
        <string name="female">Female</string>
        <string name="btech">Btech passout year</string>
        <string name="select">Select</string>
        <string name="dob">DOB</string>
        <string name="dobDate">Select DOB date</string>
        <string name="dobTime">Date and Time</string>
        <string name="selectdatetime">Select Date and Time</string>
        <string name="howdourate">How do you rate your self</string>
        <string name="howurate">How do you rate your self 1 to 5</string>
        <string name="submit">Submit</string>
    <string name="users">Users</string>
    <string name="edit">Edit</string>
    <string name="save">SAVE</string>
    <string name="edituser">Edit User</string>
    <string name="new_user_registration_button">User Registration Button</string>
        <string name="_1">1</string>
        <string name="_2">2</string>
        <string name="_3">3</string>
        <string name="_4">4</string>
        <string name="_5">5</string>
        <string name="enter_emailid_here">Enter email id ...</string>
        <string name="dob_image">dob_image</string>
        <string name="date_and_time">date_and_time</string>
    <string name="String29">Users</string>
    <string name="String30">Edit</string>
    <string name="String31">Date and Time :</string>
    <string name="String32">DOB :</string>
    <string name="String33">Btech passout year :</string>
    <string name="String34">Gender :</string>
    <string name="String35">email id :</string>
    <string name="String36">Name :</string>
    <string name="String1">Add Users</string>
    <string name="String2">Name</string>
    <string name="String3">Email</string>
    <string name="String4">Enter your email Id</string>
    <string name="String5">Enter name</string>
    <string name="String6">Gender</string>
    <string name="String7">Btech passout year</string>
    <string name="String8">select</string>
    <string name="String9">Male</string>
    <string name="String10">Female</string>
    <string name="String11">2023</string>
    <string name="String12">2022</string>
    <string name="String13">2021</string>
    <string name="String14">2020</string>
    <string name="String15">2019</string>
    <string name="String16">How do you rate your self</string>
    <string name="String17">DOB</string>
    <string name="String18">Date and Time</string>
    <string name="String19">How do you rate yourself</string>
    <string name="String20">How do you rate your self 1 to 6</string>
    <string name="String21">1</string>
    <string name="String22">2</string>
    <string name="String23">3</string>
    <string name="String24">4</string>
    <string name="String25">5</string>
    <string name="String26">Save</string>
    <string name="String27">Users</string>
    <string name="String28">Edit</string>
    <string name="String111">enter your name</string>


</resources>
