<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:id="@+id/linear"
        android:layout_width="412dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="0dp"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <ImageView
            android:id="@+id/header"
            android:layout_width="397dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:alpha="0.4"
            android:contentDescription="HeaderBar"
            android:src="@drawable/headerfornextassignment" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="27dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginStart="160dp"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center_horizontal"
                android:text="@string/String1"
                android:textColor="@color/color2"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/edit"
                android:layout_width="35dp"
                android:layout_height="23dp"

                android:layout_marginStart="120dp"
                android:fontFamily="@font/open_sans"

                android:padding="2dp"
                android:text="@string/String2"
                android:textColor="@color/color5"
                android:textSize="15dp"

                />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear" />


    <ImageButton

        android:id="@+id/plusImg"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="336dp"
        android:layout_marginTop="550dp"
        android:background="@drawable/ic_plus"
        android:contentDescription="@string/new_user_registration_button"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear" />




</androidx.constraintlayout.widget.ConstraintLayout>